<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

	<org.zakariya.photodoodle.DoodleView
		android:id="@+id/doodleView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="fill"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="bottom"
		android:gravity="center_vertical|center_horizontal"
		android:background="#ffffff">

		<ImageButton
			android:id="@+id/pencilToolButton"
			style="@style/DrawingToolButtonStyle"
			android:src="@drawable/doodle_tool_pencil_inactive"
			android:contentDescription="@string/tool_name_pencil"
			/>

		<ImageButton
			android:id="@+id/brushToolButton"
			style="@style/DrawingToolButtonStyle"
			android:src="@drawable/doodle_tool_brush_inactive"
			android:contentDescription="@string/tool_name_brush"
			/>

		<ImageButton
			android:id="@+id/largeEraserToolButton"
			style="@style/DrawingToolButtonStyle"
			android:src="@drawable/doodle_tool_large_eraser_inactive"
			android:contentDescription="@string/tool_name_large_eraser"
			/>

		<ImageButton
			android:id="@+id/smallEraserToolButton"
			style="@style/DrawingToolButtonStyle"
			android:src="@drawable/doodle_tool_small_eraser_inactive"
		    android:contentDescription="@string/tool_name_small_eraser"
			/>


	</LinearLayout>


</FrameLayout>
